fixed alignment of checkboxes on channels widget

--- a/chrome/src/components/Main/MainApp/Docker/Widgets/Widgets.scss
+++ b/chrome/src/components/Main/MainApp/Docker/Widgets/Widgets.scss
@@ -33,7 +33,7 @@ h4 {
 .channelInvitations {
   color: #4A4A4A;
   font-size: 1.2em;
-  margin: 20px 0px 0px 45px;
+  margin: 20px 0px 0px 40px;
   font-weight: 400;
 }
 
@@ -47,13 +47,13 @@ h4 {
   color: #4A4A4A;
   font-size: 1.2em;
   font-weight: 400;
-  margin: 20px 0px 0px 45px;
+  margin: 20px 0px 0px 40px;
   padding: 0;
 }
 
 .check {
   width: 15px;
-  padding: 10px 0px 0 0;
+  padding: 1px 0px;
   margin: 0;
   position: absolute;
   left: 15px;
@@ -71,7 +71,7 @@ h4 {
 
 .cross {
   width: 13px;
-  // padding: 10px 0px 0 0;
+  padding: 2px 0px;
   margin: 0;
   position: absolute;
   left: 15px;
